[package]
name = "winx"
version = "0.35.1"
authors = [
    "Jakub Konka <kubkon@jakubkonka.com>",
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "Windows API helper library"
documentation = "https://docs.rs/winx"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/sunfishcode/winx"
edition = "2018"

[dependencies]
bitflags = "1.0"
io-lifetimes = { version = "1.0.0", default-features = false }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
